[project]
name = "mcp-python"
requires-python = ">= 3.11"
version = "0.1.0"
description = "A Python project using pixi for package management."
dependencies = ["fastmcp>=2.5.1,<3"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-aarch64"]

[tool.pixi.pypi-dependencies]
mcp_python = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
requests = ">=2.32.3,<3"
