[project]
name = "mcp-python"
requires-python = ">= 3.11"
version = "0.1.0"
description = "A Python project using pixi for package management."
dependencies = ["fastmcp>=2.5.1,<3"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-aarch64"]

[tool.pixi.pypi-dependencies]
mcp_python = { path = ".", editable = true }

[tool.pixi.tasks]
fmt = "black src/ && isort src/"
lint = "pylint src/"
style = [{ task = "fmt" }, { task = "lint" }]

[tool.pixi.dependencies]
requests = ">=2.32.3,<3"
black = ">=25.1.0,<26"
isort = ">=6.0.1,<7"
pylint = ">=3.3.7,<4"

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
